# flipper_zero_wallet

./: Cargo.toml  PROJECT_OVERVIEW.txt  README.md  README_PROJECT_COMPLETION.txt  TESTING_GUIDE.rs  application.fam  test_vectors.txt
.github/workflows/: release.yml
assets/: wallet-10x10.icon
src/: address.rs  aes.rs  bip32.rs  bip39.rs  fixed_string.rs  flipper_app.rs  flipper_wallet_core.rs  hex.rs  keccak256.rs  lib.rs  main.rs  pbkdf2.rs  qrcodegen.rs  ripemd160.rs  secp256k1.rs  sha256.rs  storage.rs  trng.rs  word_list.rs
